--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-highlight-words": "^0.16.7",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.6.7",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "i18next-browser-languagedetector": "^7.2.0",
